@@ -1,0 +1,9 @@
+package test.jar;
+
+import org.testng.annotations.Test;
+
+public class A {
+
+  @Test
+  public void f() {}
+}
