@@ -1,0 +1,9 @@
+package test.jar;
+
+import org.testng.annotations.Test;
+
+public class B {
+
+  @Test
+  public void g() {}
+}
