@@ -1,6 +1,8 @@
 ===========================================================================
 5.9
-TESTNG-231: NullPointerException thrown converting a suite to XML (Mark)
+
+Added: -testjar supports jar file with no testng.xml file
+Fixed: TESTNG-231: NullPointerException thrown converting a suite to XML (Mark)
 
 ===========================================================================
 5.8
